# serializer version: 1
# name: test_all_entities[number.ecobee2_compressor_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 19.0,
      'min': -32.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.ecobee2_compressor_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Compressor minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-off',
    'original_name': 'Compressor minimum temperature',
    'platform': 'ecobee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'compressor_protection_min_temp',
    'unique_id': '8675308_compressor_protection_min_temp',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.ecobee2_compressor_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'ecobee2 Compressor minimum temperature',
      'icon': 'mdi:thermometer-off',
      'max': 19.0,
      'min': -32.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 5,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.ecobee2_compressor_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-12.2',
  })
# ---
# name: test_all_entities[number.ecobee2_fan_minimum_on_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.ecobee2_fan_minimum_on_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan minimum on time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan minimum on time',
    'platform': 'ecobee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan_min_on_time',
    'unique_id': '8675308_fan_min_on_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities[number.ecobee2_fan_minimum_on_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'ecobee2 Fan minimum on time',
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.ecobee2_fan_minimum_on_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_all_entities[number.ecobee_fan_minimum_on_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.ecobee_fan_minimum_on_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan minimum on time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan minimum on time',
    'platform': 'ecobee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan_min_on_time',
    'unique_id': '8675309_fan_min_on_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities[number.ecobee_fan_minimum_on_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'ecobee Fan minimum on time',
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.ecobee_fan_minimum_on_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_all_entities[number.ecobee_ventilator_minimum_time_away-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.ecobee_ventilator_minimum_time_away',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ventilator minimum time away',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ventilator minimum time away',
    'platform': 'ecobee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ventilator_min_type_away',
    'unique_id': '8675309_ventilator_away',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities[number.ecobee_ventilator_minimum_time_away-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'ecobee Ventilator minimum time away',
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.ecobee_ventilator_minimum_time_away',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_all_entities[number.ecobee_ventilator_minimum_time_home-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.ecobee_ventilator_minimum_time_home',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ventilator minimum time home',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ventilator minimum time home',
    'platform': 'ecobee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ventilator_min_type_home',
    'unique_id': '8675309_ventilator_home',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities[number.ecobee_ventilator_minimum_time_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'ecobee Ventilator minimum time home',
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.ecobee_ventilator_minimum_time_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20',
  })
# ---
# name: test_all_entities[number.unknownecobeename_fan_minimum_on_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.unknownecobeename_fan_minimum_on_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan minimum on time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan minimum on time',
    'platform': 'ecobee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan_min_on_time',
    'unique_id': '8675307_fan_min_on_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities[number.unknownecobeename_fan_minimum_on_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'unknownEcobeeName Fan minimum on time',
      'max': 60,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 5,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.unknownecobeename_fan_minimum_on_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
